2010-05-14 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/time_slider/applet.py:
	  Determine volume name of rsync target if available and
	  display that instead of the raw mount point in 
	  notifications. More user friendly.

2010-05-14 Erwann Chenede - <erwann.chenede@sun.com>

	* usr/share/time-slider/glade/time-slider-delete.glade:
	  Added Type combobox
	* usr/share/time-slider/lib/plugin/pluginsmf.py:
	  fix import to call this class from a non standard 
	  location
	* usr/share/time-slider/lib/time_slider/deletegui.py:
	  implemented rsync backup visualization and deletion
	* usr/share/time-slider/lib/time_slider/zfs.py: 
	  renamed member function destroy_snapshot to destroy 
	  to reflect allow polymorphic call in deletegui.py
	  as the list of backup to delete can now be snapshots
	  or rsync backups.
	* usr/share/time-slider/lib/time_slider/timesliderd.py:
	  propagated member function destroy name change.

2010-05-14 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/plugin/rsync/backup.py:
	  Fix list ValueError in list_pending_snapshots() caused
	  when rsync plugin is enabled but no fileystems are 
	  selected for backup. Check that zfs returns something
	  more than a blank in such cases.

2010-05-14 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/glade/time-slider-setup.glade:
	  Fix resizing issue that prevented list view from expanding
	  to occupy all extra space when window gets vertically
	  extended.

2010-05-14 Niall Power - <niall.power@oracle.com>

	* etc/dbus-1/system.d/time-slider.conf:
	  Add service and policy definitions for TimSlider.config
	  service.

	* usr/share/time-slider/lib/plugin/rsync/backup.py:
	  Deal with backup device being mounted under variable
	  removable media mount points if not found in it's expected
	  location. Find and validate alternate mount points.

	* usr/share/time-slider/lib/time_slider/applet.py: